app/chart/templates/postgres-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-ingress
  namespace: crypto
  annotations:
    "helm.sh/hook": pre-install,pre-upgrade
    "helm.sh/hook-weight": "-20"
    "helm.sh/hook-delete-policy": before-hook-creation
spec:
  podSelector:
    matchLabels:
      app: postgres
  policyTypes:
    - Ingress
  ingress:
  - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: crypto
        podSelector:
          matchLabels:
            app: cryptoledger
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: crypto
        podSelector:
          matchLabels:
            app.kubernetes.io/component: monitoring
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: crypto
        podSelector:
          matchLabels:
            app: cryptoledger-migrate
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: crypto
        podSelector:
          matchLabels:
            app: cryptoledger-collectstatic
    ports:
      - protocol: TCP
        port: 5432
